--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_pdfview: ^1.2.5
   google_nav_bar: ^5.0.6
   http: ^0.13.5
+  lottie: ^2.0.0
   open_file: ^3.2.1
   path: ^1.8.2
   path_provider: ^2.0.11
@@ -60,6 +61,7 @@ flutter:
   assets:
     - assets/images/storiatour.png
     - assets/images/bromoh.jpg
+    - assets/images/payment-successful.gif
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
