--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/images/storiatour.png
     - assets/images/bromoh.jpg
+    - assets/images/ranu_kumbolo.jpg
     - assets/images/payment-successful-unscreen.gif
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
