--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,11 @@ dependencies:
   flutter:
     sdk: flutter
   google_nav_bar: ^5.0.6
+  http: ^0.13.5
   line_icons: ^2.0.1
   pdf: ^3.8.4
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
