--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cached_pdfview: ^0.4.1
+  flutter_easyloading: ^3.0.5
   google_nav_bar: ^5.0.6
   native_pdf_view: ^6.0.0+1
   provider: ^6.0.4
+  shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.7
 
