--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   flutter_easyloading: ^3.0.5
   google_nav_bar: ^5.0.6
   lottie: ^2.1.0
-  native_pdf_view: ^6.0.0+1
+  native_pdf_view: any
+  photo_view: any
   provider: ^6.0.4
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.7
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
