--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_cached_pdfview: ^0.4.1
   flutter_easyloading: ^3.0.5
   google_nav_bar: ^5.0.6
+  image_picker: ^0.8.6
   lottie: ^2.1.0
   native_pdf_view: any
   photo_view: any
@@ -44,7 +45,6 @@ dependencies:
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.7
-  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
