--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,16 @@ flutter:
     - assets/logoo.jpg
     - assets/pdf/pdf.pdf
     - assets/justina.jpg
+    - assets/images/storiatour.png
+    - assets/images/Logo-BCA_Biru.png
+    - assets/images/bromoh.jpg
+    - assets/images/justina.jpg
+    - assets/images/ranu_kumbolo.jpg
+    - assets/images/profil.jpg
+    - assets/images/payment-successful-unscreen.gif
+    # - assets/pdf/BKPM.pdf
+    - assets/pdf/sop.pdf
+  #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
