--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/bromoh.jpg
+    - assets/ranu pani.jpg
+    - assets/ranu regulo.jpg
     - assets/logoo.jpg
     - assets/pdf/pdf.pdf
     - assets/justina.jpg
     - assets/images/storiatour.png
     - assets/images/Logo-BCA_Biru.png
+    - assets/images/semeru.png
     - assets/images/bromoh.jpg
     - assets/images/justina.jpg
     - assets/images/ranu_kumbolo.jpg
