--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  dropdown_formfield: ^0.1.4
+  dropdownfield: ^1.0.3
   firebase_auth: ^4.1.1
   flutter:
     sdk: flutter
@@ -38,6 +40,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   google_nav_bar: ^5.0.6
   image_picker: ^0.8.6
+  intl: ^0.18.0
   lottie: ^2.1.0
   native_pdf_view: any
   photo_view: any
