--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.6
   intl: ^0.18.0
   lottie: ^2.1.0
+  modal_bottom_sheet: ^2.1.2
   native_pdf_view: any
   photo_view: any
   provider: ^6.0.4
